--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,8 @@
 {
-  "name": "My Web App",
-  "short_name": "Web App",
-  "start_url": "/",
+  "name": "Your App Name",
+  "short_name": "App Name",
+  "start_url": "/g.html",
   "display": "standalone",
-  "theme_color": "#ffffff",
   "background_color": "#ffffff",
-  "icons": [
-    {
-      "src": "icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "theme_color": "#ffffff"
 }
