--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-"name": "dcode PWA example",
-"short_name": "dcode PWA example",
-"start_url": ".",
-"background_color": "#6dcdb1",
-"theme_color": "#009578"
+  "name": "dcode PWA example",
+  "short_name": "dcode PWA example",
+  "start_url": "/g.html",
+  "background_color": "#6dcdb1",
+  "theme_color": "#009578"
 }
