--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,6 @@
   "short_name": "dcode PWA example",
   "start_url": "/g.html",
   "background_color": "#6dcdb1",
-  "theme_color": "#009578"
+  "theme_color": "#009578",
+  "display": "standalone"
 }
